2004-08-07  Carlos Garnacho Parro  <carlosg@gnome.org>

	* boot.glade.in, network.glade.in, users.glade.in: wrapped the title
	text in the main dialogs

2004-08-03  Carlos Garnacho Parro  <carlosg@gnome.org>

	* boot.glade.in, network.glade.in, services.glade.in, time.glade.in:
	random a11y improvements

2004-08-02  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.glade.in: hide by default the default gateway stuff

2004-07-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.90

2004-07-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot.glade.in, common.glade.in, network.glade.in, services.glade.in,
	  time.glade.in, users.glade.in: Removed complexity thing, added help
	  buttons and other fancy UI improvements

2004-07-07  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* common.glade.in: removed the "apply" button

2004-06-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.34

2004-06-18  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot.glade.in: replaced deprecated widgets with the new shiny ones

2004-06-17  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.glade.in: replaced the default gateway GtkOptionMenu
	  with a GtkComboBox

2004-06-17  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.glade.in: replaced the ppp dial command GtkOptionMenu
	  with a GtkComboBox

2004-06-17  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.glade.in: replaced the modem device GtkCombo with a
	  GtkComboBoxEntry

2004-06-17  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.glade.in: replaced the wireless device GtkCombo with a
	  GtkComboBoxEntry

2004-06-17  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.glade.in: replaced the IP config type GtkOptionMenus with
	  GtkComboBoxes

2004-06-13  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.glade.in: replaced the profiles GtkOptionMenu with a
	  GtkComboBox

2004-06-02  Carlos Garnacho Parro  <garnacho@tuxerver.net>
