@@ -1,3 +1,7 @@
+2004-08-17  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* users.glade.in: reworked the user privileges stuff, now it's nice
+
 2004-08-07  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* boot.glade.in, network.glade.in, users.glade.in: wrapped the title
